# hyprland-display-manager

./: .gitignore  Makefile  pyproject.toml
src/: __main__.py
