[tool.poetry]
name = "hyprland-display-manager"
version = "0.1.0"
description = ""
authors = ["Author Name <author@example.com>"]
# readme = "README.md"
# license = "BSD"
packages = [
  { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
hyprpy = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
